'under construction' visibility corrected

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -123,6 +123,25 @@ header {
       }
     }
   }
+  #under-construction {
+    position: absolute;
+    right: 5vw;
+    bottom: 60px;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 12px;
+    animation-duration: 0.5s !important;
+    &:not(.fadeInUp) {
+      visibility: hidden;
+    }
+  &.fadeInUp + .navigation {
+    @media (max-width: 991px) {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+  }
   .navigation {
     position: relative;
     width: 100%;
@@ -130,8 +149,12 @@ header {
     margin-bottom: 0;
     padding-left: 0;
     list-style-type: none;
+    transition: all 0.25s ease;
     @media (max-width: 1199px) {
       margin-top: 100px;
+    }
+    @media (max-width: 768px) {
+      margin-top: 60px;
     }
     li {
       float: left;
@@ -142,31 +165,6 @@ header {
       & + li {
         margin-left: 30px;
       }
-    &#under-construction {
-      position: absolute;
-      right: 0;
-      margin-left: 0;
-      cursor: auto;
-      animation-duration: 0.5s !important;
-      @media (max-width: 768px) {display: none;}
-      &:not(.fadeInUp) {
-        visibility: hidden;
-      }
-      &::before {
-        @media (max-width: 991px) {
-          content: "";
-          display: block;
-          position: absolute;
-          z-index: -1;
-          right: 0;
-          bottom: 50%;
-          transform: translateY(50%);
-          width: 40vw;
-          height: 40px;
-          background-color: white;
-        }
-      }
-    }
     }
   }
 }
